--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d1b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d1b.htm
@@ -4,22 +4,22 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Overriding or removing patterns that prevent resources from releasing</title>
+<title>Overriding or removing file ignore patterns</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Overriding patterns that prevent resources from releasing</H1>
+Overriding or removing file ignore patterns</H1>
 
 
 <p CLASS="Para" Label="Type">After you have added global file-matching patterns
-to the list of files to be ignored at release time, you may wish to occasionally
-override the &quot;ignore.&quot;</p>
+to the list of files to be ignored for version management, you may wish to occasionally
+override the &quot;ignore&quot;.</p>
 
 
 <ol>
   <li>
-    <p CLASS="Para" Label="Type">From the main menu bar, select <b>Workbench
+    <p CLASS="Para" Label="Type">From the main menu bar, select <b>Window
     &gt; Preferences &gt; Team &gt; Ignored Resources</b>.</li>
   <li>
     <p CLASS="Para" Label="Type">To temporarily override one or more of the
@@ -28,27 +28,27 @@ override the &quot;ignore.&quot;</p>
     <p CLASS="Para" Label="Type">Click <b>OK</b>. </li>
 </ol>
 <p CLASS="Para" Label="Type">Files that match the patterns you have deselected
-will not be ignored during catch-up or release operations.</p>
+will be considered for version control.</p>
 <p CLASS="Para" Label="Type">To permanently remove a pattern, select it and
 click <b>Remove</b>. </p>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-27b.htm">
-Streams</a><a href="../reference/ref-51a.htm"><br>
+Branches</a><a href="../reference/ref-51a.htm"><br>
 </a><a href="../concepts/concepts-30.htm">
 Team synchronization</a>&nbsp;</p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-114.htm"><br>
-Releasing resources to the stream</a><a href="tasks-100d.htm"><br>
-Filtering resources from a release</a><a href="tasks-100d1.htm"><br>
+Committing resources to a branch</a><a href="tasks-100d.htm"><br>
+Filtering resources from a commit</a><a href="tasks-100d1.htm"><br>
 Creating a global pattern to
-                filter resources from releasing</a> &nbsp;<a href="tasks-100d2.htm"><br>
+                filter resources from version management</a> &nbsp;<a href="tasks-100d2.htm"><br>
 Adding a CVS ignore file to
-                filter resources from a release</a> &nbsp;<a href="tasks-100d3.htm"><br>
+                filter resources from version management</a> &nbsp;<a href="tasks-100d3.htm"><br>
 Stopping resources from
-                releasing at synchronization time</a> &nbsp;
+                being committed at synchronization time</a> &nbsp;
 </p>
 
 <p>&nbsp;<br>
