--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-113.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-113.htm
@@ -4,84 +4,87 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Catching Up</title>
+<title>Updating</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Catching up</H1>
-<P CLASS="Para">
-While you are working in the workbench, other members of your team may be releasing changes to the
-stream. To update
-the resources in your workbench, you may &quot;catch up&quot; with the stream.
-You control when you choose to catch up with a stream and
-which incoming changes from a stream you want to accept into the workbench.</P>
-<p CLASS="Para">When you catch up to a stream, you will see changes that have
-been released to the stream since you last caught up. If you accept these
-incoming changes, they are incorporated into your local workbench. If your local
-workbench contains any outgoing changes that conflict with incoming changes from
-the stream, then you must merge the differences in your workbench, as described
-below.</p>
-<p CLASS="Para">To catch
-up:</p>
+<H1 CLASS="Head"> Updating</H1>
+<P CLASS="Para"> While you are working in the workbench, other members of your 
+  team may be committing changes to the branch you are working in (or HEAD). To 
+  update the resources in your workbench, you may &quot;update&quot; your workbench 
+  to match the state of the branch. You control when you choose to update.</P>
+<p>The update command can be issued from two places: the <b>Team&gt;Update</b> 
+  menu, or the <b>Synchronization</b> view. </p>
+<p>If you update a file which has local uncommitted changes, CVS will attempt 
+  to merge the changes of the remote file into your local file. This only occur 
+  on files which CVS knows to contain text. </p>
+<p>When you select the <b>Update</b> action in the synchronization view, you'll 
+  be prompted before a merge is attempted and asked if you want to auto merge 
+  the contents or overwrite them with the repository file. When you select the 
+  <b>Team&gt;Update</b> action, no prompting will occur and those files which 
+  can be merge will be merge. This matches the CVS commandline behavior.</p>
+<p>When you catch up to a branch, you will see changes that have been released 
+  to the branch since you last caught up. If you accept these incoming changes, 
+  they are incorporated into your local workbench. If your local workbench contains 
+  any outgoing changes that conflict with incoming changes from the branch, then 
+  you must merge the differences in your workbench, as described below.</p>
+<p CLASS="Para">To update:</p>
 <ol>
   <li>
-    <p CLASS="Intro">In the Navigator view, select the resources whose stream you want to catch up
-with.</li>
+    <p CLASS="Intro">In the Navigator view, select the resources whose branch 
+      you want to updating from.
+  </li>
   <li>
-    <p CLASS="Intro">From the pop-up menu for the selected resources, select <b>Team &gt; Synchronize with Stream</b>.</li>
+    <p CLASS="Intro">From the pop-up menu for the selected resources, select <b>Team 
+      &gt; Synchronize with Repository</b>.
+  </li>
   <li>
-    <p CLASS="Intro">Switch to the Team perspective.* On the toolbar of the Synchronize view,
-    click the <b> Catch up mode</b> button to filter out any modified workbench resources (outgoing
-changes) that you may have.</p>
+    <p CLASS="Intro">Switch to the Team perspective. On the toolbar of the Synchronize 
+      view, click the <b> incoming mode</b> button to filter out any modified 
+      workbench resources (outgoing changes) that you may have.</p>
     <p CLASS="Intro">
-In the Text Compare area of the Synchronize view, local workbench data is represented on the left, and repository stream data
+In the Text Compare area of the Synchronize view, local workbench data is represented on the left, and repository branch data
     is represented on the right. Click the <b> Show ... Changes</b> buttons in the Structure Compare editor as needed to display all differences.</li>
   <li>
-    <p CLASS="Intro">If there are conflicts (represented by red arrows), resolve
-    them. Use the text compare area to merge&nbsp; resources with conflicts. You can copy
-changes from the repository version of the resource to the workbench version of
-the resource and save the merged workbench resource.&nbsp;</li>
+    <p CLASS="Intro">If there are conflicts (represented by red arrows), resolve 
+      them. Use the text compare area to merge&nbsp; resources with conflicts. 
+      You can copy changes from the repository revision of the resource to the 
+      workbench copy of the resource and save the merged workbench resource.&nbsp;
+  </li>
   <li>
-    <p CLASS="Intro">Once there are no conflicts, you can safely
-catch up all
-the&nbsp; resources in the workbench without having to worry that you will lose
-changes you made in the workbench. In the Structure Compare pane, right-click the top-most resources
-    that you want to catch up with, select <b>Catch Up</b> from the pop-up menu.</li>
+    <p CLASS="Intro">Once there are no conflicts, you can safely update all the&nbsp; 
+      resources in the workbench without having to worry that you will lose changes 
+      you made in the workbench. In the Structure Compare pane, right-click the 
+      top-most resources that you want to updated, select <b>Update</b> from the 
+      pop-up menu.
+  </li>
 </ol>
-<p CLASS="Intro">The stream itself is not changed when you catch up. When you
-accept incoming changes, these changes are applied to your workbench. The stream
-is only changed when you release your outgoing changes.</p>
+<p CLASS="Intro">The branch itself is not changed when you update. When you accept 
+  incoming changes, these changes are applied to your workbench. The branch is 
+  only changed when you commit wing whenyour outgoing changes.</p>
 
 
-<p CLASS="Intro">*<b>Tip</b>: To configure the workbench to switch automatically
-to the Team perspective on release and catch-up operations, select Workbench
-&gt; Preferences &gt; Team from the main menu bar.</p>
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../reference/ref-51a.htm"><br>
-</a><a href="../concepts/concepts-30.htm">
-Team synchronization</a>&nbsp;<a href="../concepts/concepts-30b.htm"><br>
-Synchronize view</a></p>
+<p CLASS="Intro"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+  <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../reference/ref-51a.htm"><br>
+  </a><a href="../concepts/concepts-30.htm"> Team synchronization</a>&nbsp;<a href="../concepts/concepts-30b.htm"><br>
+  Synchronize view</a></p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
 </a><a href="tasks-115.htm">
-Synchronizing with a stream<br>
+Synchronizing with a branch<br>
 </a><a href="tasks-113b.htm">
 Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-Merging from a stream</a><a href="tasks-114.htm"><br>
-Releasing resources to the stream</a><a href="tasks-100d.htm"><br>
+Merging from a branch</a><a href="tasks-114.htm"><br>
+  Committing resources to a branch</a><a href="tasks-100d.htm"><br>
 </a><a href="tasks-117.htm">
-Associating a project with a stream</a><a href="tasks-119.htm"><br>
+Associating a project with a branch</a><a href="tasks-119.htm"><br>
 </a><a href="tasks-100a.htm">
-Splitting from a stream</a></p>
+Splitting from a branch</a></p>
 
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
-</a><a href="../reference/ref-51a.htm">
-Streams in CVS</a></p>
+  </a><a href="../reference/ref-51a.htm"> Branches in CVS</a></p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
