--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-115.htm
@@ -4,61 +4,56 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Synchronizing resources in the workbench with the team stream</title>
+<title>Synchronizing with the repository</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Synchronizing with a stream</H1>
-<P CLASS="Intro">
-<b>Tip</b>: Before performing your first&nbsp;
-synchronize operation, consider which files and directories you wish to ignore
-at release time, and add those to the appropriate &quot;ignore&quot; facility.&nbsp;Once a resource is under version control, it cannot easily be
-ignored in subsequent release operations. Resources come under version control in the first place when a
-synchronize operation is performed on a resource or any of its parent
-folders. See &quot;<a href="tasks-100d.htm">Filtering resources from a release</a>.&quot;
-<P CLASS="Intro">
-To synchronize resources in the workbench with
-resources in a stream:
+<H1 CLASS="Head">Synchronizing with the repository</H1>
+<P CLASS="Intro">To synchronize resources in the workbench with resources in a 
+  branch: 
 <ol>
   <li>
     <p CLASS="Intro">In the Navigator view, select the resources that you want to
-synchronize with a stream.</li>
+synchronize with a branch.</li>
   <li>
-    <p CLASS="Intro">Right-click and select <b>Team &gt; Synchronize
-with Stream</b>. The Synchronize view opens.</li>
+    <p CLASS="Intro">Right-click and select <b>Team &gt; Synchronize with Repository</b>. 
+      The Synchronize view opens.
+  </li>
   <li>
     <p CLASS="Intro">Use the toolbar buttons to switch modes for this view.
     There are three:
     <ul>
       <li>
-        <p CLASS="Intro">Catch up mode - shows incoming changes only (resources in the
-    stream that differ from what is in the workbench). Refer to the
-        &quot;Catching Up&quot; topic.</li>
+        <p CLASS="Intro">Incoming mode - shows incoming changes only (resources 
+          in the branch that differ from what is in the workbench).
+      </li>
       <li>
-        <p CLASS="Intro">Release mode - shows outgoing changes only (resources
-    modified in the workbench). Refer to the &quot;Releasing&quot; topic.</li>
+        <p CLASS="Intro">Outgoing mode - shows outgoing changes only (resources 
+          modified in the workbench).
+      </li>
       <li>
-        <p CLASS="Intro">Catch Up/Release mode - shows both incoming and outgoing
-    changes.</li>
+        <p CLASS="Intro">Incoming/Outgoing mode - shows both incoming and outgoing 
+          changes.
+      </li>
     </ul>
-    <p CLASS="Intro"><b>Important</b>: It is preferable to catch up resources in
-    the workbench first, resolve any conflicts that exist by merging, then
-    release workbench resources to the stream.</li>
+    <p CLASS="Intro"><b>Important</b>: It is preferable to update resources in 
+      the workbench first, resolve any conflicts that exist by merging, then commit 
+      workbench resources to the branch.
+  </li>
   <li>
     <p CLASS="Intro">To show only conflicts (resources edited in both the workbench
-and in the stream), click the <b>
+and in the branch), click the <b>
 Show Only Conflicts</b> button on the view's toolbar.</li>
 </ol>
-<p CLASS="Intro">The resources displayed in the Structure Compare area will
-depend on which filters are used in the Synchronize view.
-In the Text Compare area, the workbench resource is on the left side, and the stream
-resource is on the right side.</p>
+<p CLASS="Intro">The resources displayed in the Structure Compare area will depend 
+  on which filters are used in the Synchronize view. In the Text Compare area, 
+  the workbench resource is on the left side, and the repository resource is on 
+  the right side.</p>
 
 
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27b.htm"><br>
-Streams</a><a href="../reference/ref-51a.htm"><br>
+  Branches</a><a href="../reference/ref-51a.htm"><br>
 </a><a href="../concepts/concepts-30.htm">
 Team synchronization</a>&nbsp;<a href="../concepts/concepts-30b.htm"><br>
 Synchronize view<br>
@@ -66,23 +61,16 @@ Synchronize view<br>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-96.htm">
-Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
-Replacing resources with a repository
-        version</a><a href="tasks-111.htm"><br>
-</a><a href="tasks-117.htm">
-Associating a project with a stream</a><a href="tasks-119.htm"><br>
-</a><a href="tasks-100a.htm">Splitting from a stream</a><a href="tasks-115.htm"><br>
-</a><a href="tasks-113.htm">
-Catching up<br>
-</a><a href="tasks-68.htm">Comparing resources</a>
-<a href="tasks-115.htm"><br>
-</a><a href="tasks-68dg.htm">Merging changes in the comparison editor</a><a href="tasks-113b.htm"><br>
-Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
-Merging from a stream</a><a href="tasks-114.htm"><br>
-Releasing resources to the stream</a><a href="tasks-100d.htm"><br>
-Filtering resources from a release</a> 
-</p>
+  </a><a href="tasks-96.htm"> Adding resources from a repository to the workbench</a>&nbsp;<a href="tasks-103.htm"><br>
+  Replacing resources with a repository revision</a><a href="tasks-111.htm"><br>
+  </a><a href="tasks-117.htm"> </a><a href="tasks-100a.htm">Splitting from a branch</a><a href="tasks-115.htm"><br>
+  </a><a href="tasks-113.htm"> Updating<br>
+  </a><a href="tasks-68.htm">Comparing resources</a> <a href="tasks-115.htm"><br>
+  </a><a href="tasks-68dg.htm">Merging changes in the comparison editor</a><a href="tasks-113b.htm"><br>
+  Resolving conflicts and merging changes</a><a href="tasks-100b.htm"><br>
+  Merging from a branch</a><a href="tasks-114.htm"><br>
+  Committing resources to the branch</a><a href="tasks-100d.htm"><br>
+  Ignoring resources</a> </p>
 
 
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-48b.htm"><br>
