--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-114.htm
@@ -4,91 +4,74 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Releasing resources to the team stream</title>
+<title>Committing resources to the branch</title>
 <meta name="keyword" content="team">
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <H1 CLASS="Head">
-Releasing resources to the stream </H1>
-<P CLASS="Intro">
-
-<b>Tip</b>: Before performing your first&nbsp; synchronize operation, consider
-which files and directories you wish to ignore at release time, and add those to
-the appropriate &quot;ignore&quot; facility.&nbsp;Once a resource is under
-version control, it cannot easily be ignored in subsequent release operations.
-Resources come under version control in the first place when a synchronize
-operation is performed on a resource or any of its parent folders. See &quot;<a href="tasks-100d.htm">Filtering
-resources from a release</a>.&quot;
-<P CLASS="Intro">
-
-You can release workbench resources to the stream so that other team members can
-catch up with your work.&nbsp; To release changes to a stream:
+Committing resources to the branch </H1>
+<P CLASS="Intro"> <b>Tip</b>: Before performing your first&nbsp;synchronize operation, 
+  consider which files and directories you wish to ignore at commits an time, 
+  and add those to the appropriate &quot;ignore&quot; facility.&nbsp;Once a resource 
+  is under version control, it cannot easily be ignored in subsequent commit operations. 
+  Resources come under version control in the first place when a synchronize operation 
+  is performed on a resource or any of its parent folders. See &quot;<a href="tasks-100d.htm">Filtering 
+  resources from a commit</a>.&quot; 
+<P CLASS="Intro"> You can commit workbench resources to the branch so that other 
+  team members can update with themyour work.&nbsp; To commit changes to a branch: 
 <ol>
-  <li>
-    <p CLASS="Intro">In the Navigator view, select the resources that
-you want to release to the stream.</li>
-  <li>
-    <p CLASS="Intro">Right-click to open the pop-up menu and select <b> Team &gt; Synchronize with Stream.</b></li>
-  <li>
-    <p CLASS="Intro">Switch to the Team perspective. On the toolbar of the
-    Synchronize view, select the <b> Release mode</b> button to show any modified workbench resources (outgoing changes)
-    that you
-may have.</li>
-  <li>
-    <p CLASS="Intro">If there are conflicts (red arrows), resolve them. Use the
-text compare area to merge&nbsp; resources with conflicts. You can copy
-changes from the repository version of the resource to the workbench version of
-the resource and save the merged workbench resource.&nbsp; Once all the
-conflicts in the Structure Compare area have been resolved, you are ready to
-release.&nbsp;</li>
-  <li>
-    <p CLASS="Intro">When there are no conflicts, you can release all resources
-    to the stream. In the Structure Compare pane, right-click the top of the hierarchy
-    that you want to release, and select <b>Release</b> from the pop-up menu.</li>
-  <li>
-    <p CLASS="Intro">
-In the Release Comment Needed dialog box, provide a comment for this release
-    (for example, <samp>Fixed the
-spelling mistakes</samp>).</li>
+  <li> 
+    <p CLASS="Intro">In the Navigator view, select the resources that you want 
+      to commit to the branch.
+  </li>
+  <li> 
+    <p CLASS="Intro">Right-click to open the pop-up menu and select <b> Team &gt; 
+      Synchronize with Stream.</b>
+  </li>
+  <li> 
+    <p CLASS="Intro">Switch to the Team perspective. On the toolbar of the Synchronize 
+      view, select the <b> outgoing mode</b> button to show any modified workbench 
+      resources (outgoing changes) that you may have.
+  </li>
+  <li> 
+    <p CLASS="Intro">If there are conflicts (red arrows), resolve them. Use the 
+      text compare area to merge&nbsp; resources with conflicts. You can copy 
+      changes from the repository version of the resource to the workbench version 
+      of the resource and save the merged workbench resource.&nbsp; Once all the 
+      conflicts in the Structure Compare area have been resolved, you are ready 
+      to commit.&nbsp;
+  </li>
+  <li> 
+    <p CLASS="Intro">When there are no conflicts, you can commit all resources 
+      to the branch. In the Structure Compare pane, right-click the top of the 
+      hierarchy that you want to commit, and select <b>Release</b> from the pop-up 
+      menu.
+  </li>
+  <li> 
+    <p CLASS="Intro"> In the Commit Comment Needed dialog box, provide a comment 
+      for this commit (for example, <samp>Fixed the spelling mistakes</samp>).
+  </li>
 </ol>
 
 
-    <p CLASS="Intro">
-<b>Tips</b>:&nbsp;
-<ul>
-  <li>
-    <p CLASS="Intro"> To configure the workbench to switch automatically to the Team
-perspective on release and catch-up operations, select <b> Workbench &gt;
-Preferences &gt; Team</b> from the main menu bar.</li>
-  <li>
-    <p CLASS="Para">You can also change the prefix label for outgoing changes that
-appears in the Navigator view, when the <b> Show Version Info</b> menu item is
-    enabled, on the Team preferences page.</li>
-</ul>
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+    <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="../concepts/concepts-26.htm">Team programming</a> &nbsp;<a href="../concepts/concepts-27c.htm"><br>
-</a><a href="../concepts/concepts-27b.htm">
-Streams</a><a href="../reference/ref-51a.htm"><br>
+  </a><a href="../concepts/concepts-27b.htm"> Branches</a><a href="../reference/ref-51a.htm"><br>
 </a><a href="../concepts/concepts-30.htm">
 Team synchronization</a>&nbsp;</p>
 
 
 <p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="tasks-92.htm"><br>
-</a><a href="tasks-117.htm">
-Associating a project with a stream</a><a href="tasks-115.htm"><br>
-Synchronizing with a stream</a><a href="tasks-113.htm"><br>
-Catching up</a><a href="tasks-113b.htm"><br>
-</a><a href="tasks-100d.htm">
-Filtering resources from a release</a><a href="tasks-100d1.htm"><br>
-Creating a global pattern to
-                filter resources from releasing</a> &nbsp;<a href="tasks-100d2.htm"><br>
-Adding a CVS ignore file to
-                filter resources from a release</a> &nbsp;<a href="tasks-100d3.htm"><br>
+  </a><a href="tasks-117.htm"> Associating a project with a branch</a><a href="tasks-115.htm"><br>
+  Synchronizing with a branch</a><a href="tasks-113.htm"><br>
+  Updating</a><a href="tasks-113b.htm"></a><br>
+  <a href="tasks-100d.htm"> Ignoring resources</a><br>
+  <a href="tasks-100d2.htm"> Ignoring resources in CVS</a><br>
+  <a href="tasks-100d1.htm">Creating a global pattern to filter resources from committing</a> &nbsp;<a href="tasks-100d2.htm"><br>
+  Adding a CVS ignore file to filter resources from a commit</a> &nbsp;<a href="tasks-100d3.htm"><br>
 Stopping resources from
-                releasing at synchronization time</a> &nbsp;<a href="tasks-100d1b.htm"><br>
-Overriding patterns that prevent resources from releasing</a></p>
+                committing at synchronization time</a> &nbsp;<a href="tasks-100d1b.htm"><br>
+Overriding patterns that prevent resources from committing</a></p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
